controller module fixed