@@ -15,7 +15,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/rentals")
@@ -32,46 +31,50 @@ public class RentalController {
     @Autowired
     private RentalMapper rentalMapper;
 
+    // GET /api/rentals
     @GetMapping
     public ResponseEntity<List<RentalResponseDTO>> getAllRentals() {
         List<RentalResponseDTO> result = rentalService.getAllRentals().stream()
                 .map(rentalMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(result);
     }
 
+    // GET /api/rentals/{rentalId}
     @GetMapping("/{rentalId}")
     public ResponseEntity<RentalResponseDTO> getRentalById(@PathVariable Integer rentalId) {
-        return ResponseEntity.ok(rentalMapper.toResponseDTO(rentalService.getRentalById(rentalId)));
+        return ResponseEntity.ok(
+                rentalMapper.toResponseDTO(
+                        rentalService.getRentalById(rentalId)
+                )
+        );
     }
 
-    @GetMapping("/by-customer/{customerId}")
-    public ResponseEntity<List<RentalResponseDTO>> getRentalsByCustomer(@PathVariable Integer customerId) {
-        List<RentalResponseDTO> result = rentalService.getRentalsByCustomer(customerId).stream()
-                .map(rentalMapper::toResponseDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(result);
-    }
-
+    // POST /api/rentals
     @PostMapping
     public ResponseEntity<RentalResponseDTO> createRental(@Valid @RequestBody RentalRequestDTO dto) {
         Rental rental = rentalMapper.toEntity(dto);
+
         rental.setInventory(inventoryService.getInventoryById(dto.getInventoryId()));
         rental.setCustomer(customerService.getCustomerById(dto.getCustomerId()));
         rental.setStaff(staffService.getStaffById(dto.getStaffId()));
-        return ResponseEntity.status(201).body(rentalMapper.toResponseDTO(rentalService.createRental(rental)));
+
+        return ResponseEntity.status(201)
+                .body(rentalMapper.toResponseDTO(
+                        rentalService.createRental(rental)
+                ));
     }
 
+    // PUT /api/rentals/{rentalId}/return
     @PutMapping("/{rentalId}/return")
     public ResponseEntity<RentalResponseDTO> returnRental(@PathVariable Integer rentalId) {
         Rental existing = rentalService.getRentalById(rentalId);
         existing.setReturnDate(LocalDateTime.now());
-        return ResponseEntity.ok(rentalMapper.toResponseDTO(rentalService.updateRental(rentalId, existing)));
-    }
 
-    @DeleteMapping("/{rentalId}")
-    public ResponseEntity<Void> deleteRental(@PathVariable Integer rentalId) {
-        rentalService.deleteRental(rentalId);
-        return ResponseEntity.noContent().build();
+        return ResponseEntity.ok(
+                rentalMapper.toResponseDTO(
+                        rentalService.updateRental(rentalId, existing)
+                )
+        );
     }
 }
